--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: base
-title: Syslog linux - admin juga manusia
+title: Syslog Linux - admin juga manusia
 ---
 
 {% assign post = site.posts.first %}
